[package]
name = "salsa-simple"
version = "0.17.0-alpha"
edition = "2021"

[dev-dependencies]
salsa20 = { version = "0.10.2" }
rand = { version = "0.8.5" }
serde_json = { version = "1.0" }

[dependencies]
generic-array = { version = "0.14.7" }
hex = { version = "0.4.3", optional = true }
inout = { version = "0.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
zeroize = { version = "1.8" }

[features]
default = ["serde", "hex"]
