[package]
name = "mina-transport"
version = "0.17.0"
edition = "2021"

[dependencies]
blake2 = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true, features = [
  "tokio",
  "noise",
  "pnet",
  "tcp",
  "yamux",
  "dns",
  "gossipsub",
] }
log = { workspace = true }
pin-project-lite = { workspace = true }
