[package]
name = "mina-transport"
version = "0.18.1"
edition = "2021"

[dependencies]
blake2 = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }

libp2p = { workspace = true, features = [
  "tokio",
  "noise",
  "pnet",
  "tcp",
  "yamux",
  "dns",
  "gossipsub",
] }
